2006-01-24  Gautier Portet <kassoulet gmail com>

	* Makefile: Fixed build on Gentoo. And corrected a typo causing pl and
	  pt to be not installed

2006-01-21  Gautier Portet <kassoulet gmail com>

	Release 0.8.3
	
	Added Error handling when trying to load files with invalid
	characters...
	
	
	Release 0.8.2

	make install-local #1154
	Pause button #1455

	Unique file #5334
	Folder dropping #5561
	Filtering by mime #5789
	Fixed problem with vbr #5872

	French Translation
	New list display
	UI Changes
	More precise progress bar
	Async tag reading
	Fixed gnomevfs problems with folders


2006-01-21  Gautier Portet <kassoulet gmail com>

	* Makefile: Added translations to build system.
	* fr.po: Updated french translation.
	* soundconverter.glade: Some minors changes.
	* soundconverter.py: Some minors fixes. The UI is now unsensitive
	  when we are converting. Fixed the convert button beiing called
	  when we were unpausing. And that's all!

2006-01-20  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: Fixed the convert/stop buttons, and some more
	  minor UI fixes.

2006-01-19  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: The progressbar should be more precise now. 

2006-01-16  Gautier Portet <kassoulet gmail com>

	* soundconverter.py: hum?!?!? File dropping was *again* broken, maybe
	  it's my evil twin who edits the code :)
	* soundconverter.py: added a timeout when reading tags.

2006-01-15  Gautier Portet <kassoulet gmail com>

	* soundconverter.glade: Reverted to old UI to make a release soon.
	* soundconverter.py: Changed the gst-lame problem at vbr-quality=9
	  handling for a cleaner one. 

2006-01-11  Gautier Portet <kassoulet gmail com>

	* Makefile: Added install-local. 
	  #1154 (Thanks Régis & Janis)
	* Added a makedirs() that use gnomevfs, so folders will really be
	  created now, even on remote filesystems.

2006-01-10  Gautier Portet <kassoulet gmail com>
